# ggm

./: Makefile  README.md
lib/: CMakeLists.txt
lib/inc/: ggm.h  module.h  osal.h
lib/module/: template.c
lib/module/root/: poly.c
src/: CMakeLists.txt
src/ggm/: CMakeLists.txt
src/ggm/inc/: osal.h
src/test/: CMakeLists.txt  linux.c  log.c  log.h  main.c
tools/: cfmt.py
